voting/vote/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    atix.de/technique: declarative object configuration
  labels:
    app: vote
    technique: declarative
  name: vote
  namespace: voting
spec:
  minReadySeconds: 10
  replicas: 3
  selector:
    matchLabels:
      app: vote
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - image: andywirtzk8s/voting-vote:v1.0
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        name: vote
        livenessProbe:
           httpGet:
             path: /
             port: http
        readinessProbe:
           httpGet:
             path: /
             port: http
        ports:
        - containerPort: 8080
          name: http
